# cruise

./: .gitignore  Cargo.toml  README.md  repeat.ps1
.github/workflows/: release.yml  rust.yml
output/: README.md
src/: game.rs  llm.rs  main.rs
src/prompts/: bnf_trade.txt  duel_0.md  duel_0_ai.md  duel_1.md  duel_1_user.md  duel_2.md  duel_3.md  duel_4.md  notify.txt  notify_0_ai.md  notify_1.md  notify_1_ai.md  notify_2_user.md  notify_3_ai.md  notify_4_ai.md  notify_5_0_ai.md  notify_5_1_ai.md  notify_5_user.md  notify_6_user.md  op_boss.md  op_boss.txt  op_me.md  op_me.txt  op_system.md  op_system.txt  trade_0.md  trade_1.md  trade_3.md  trade_3_0.md  trade_3_1.md  trade_3_2.md  trade_4.md  trade_5.md  trade_6.md  trade_7.md  trade_7_0.md  trade_8_0.md  trade_8_1.md
