[package]
edition = "2021"
name = "cruise"
version = "0.1.0"

[dependencies]
anyhow = "1"
async-std = "1.13"
bevy = "0.15"
bevy-async-ecs = "0.7"
bevy-inspector-egui = "0.29"
derivative = "2.2.0"
ehttp = { version = "0.5", features = ["json", "native-async"] }
fastrand = "2.3"
futures = "0.3.31"
itertools = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uid = "0.1.8"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
